# persistent-rabbit-rs

./: Cargo.toml
src/: configuration.rs  lib.rs  persistent.rs  uri.rs
src/error/: causes.rs  code.rs  description.rs  mod.rs
